# nm-i-ai-2026-astar-island

./: .gitignore  LICENSE  MASTERPLAN.md  README.md  pyproject.toml
docs/: Rolling Profile Selection Findings.md  Step 10 Findings.md  Step 11 Findings.md  Step 12 Findings.md  Step 13 Findings.md  Step 14 Findings.md  Step 14 Holdout 22 Findings.md  Step 6 Findings.md  Step 7 Findings.md  Step 8 Findings.md  Step 9 Findings.md  api-endpoints.md  game-description.md  overview.md  quickstart.md  rules.md  scoring.md  simulation-mechanics.md
scripts/: analyze_round_archetypes.py  evaluate_baseline_b.py  evaluate_baseline_c.py  evaluate_blending.py  evaluate_holdout_train_to_test.py  evaluate_query_policy.py  evaluate_rolling_profile_selection.py  evaluate_round_latent.py  evaluate_step13_ablations.py  evaluate_step14_world_model.py  fetch_historical_replays.py  fetch_historical_rounds.py  reproduce_historical_round.py  safe_submit_round.py
src/astar_island/: __init__.py  archetypes.py  baseline_b.py  baseline_c.py  constants.py  importance.py  models.py  offline_emulator.py  parsing.py  priors.py  query_policy.py  reproducibility.py  round_data.py  round_latent.py  scoring.py  submission.py  visualization.py  world_model.py
tests/: test_archetypes.py  test_baseline_b.py  test_baseline_c.py  test_importance.py  test_offline_emulator.py  test_priors.py  test_query_policy.py  test_reproducibility_and_step13.py  test_round_data.py  test_round_latent.py  test_safe_submit_guard.py  test_scoring.py  test_submission.py  test_world_model_and_step14.py
